--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@fullcalendar/interaction": "^5.10.1",
         "@fullcalendar/react": "^5.10.1",
         "@fullcalendar/timegrid": "^5.10.1",
+        "@giphy/js-fetch-api": "^4.4.0",
+        "@giphy/react-components": "^6.1.1",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -21,6 +23,7 @@
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^3.4.1",
         "framer-motion": "^4.1.17",
+        "lodash": "^4.17.21",
         "luxon": "^2.3.1",
         "prettier": "^2.3.2",
         "react": "^17.0.2",
@@ -31,9 +34,11 @@
         "react-redux": "^8.0.2",
         "react-router-dom": "^6.2.2",
         "react-scripts": "4.0.3",
+        "react-slick": "^0.29.0",
         "redux": "^4.1.2",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.4.1",
+        "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.1",
         "web-vitals": "^1.1.2"
     },
